--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/expo__vector-icons": "^6.2.3",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.23",
+    "@types/react-navigation": "^3.0.1",
     "babel-preset-expo": "^5.0.0",
     "react-native-typescript-transformer": "^1.2.11",
     "tslib": "^1.9.3",
