--- a/app.json
+++ b/app.json
@@ -11,6 +11,9 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "androidStatusBar": {
+      "backgroundColor": "#fcb119"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
